se agrego funcionamiento de navbar

--- a/Woo-ChapinFront/src/app/components/global/navbar/navbar.component.html
+++ b/Woo-ChapinFront/src/app/components/global/navbar/navbar.component.html
@@ -51,6 +51,6 @@
           </div>
         </li>
       </ul>
-      <a style="font-size: 1.2rem; color: white;"><i class="fa fa-shopping-cart"></i> Q0.00</a>
+      <a style="font-size: 1.2rem; color: white;" routerLink="cart"><i class="fa fa-shopping-cart"></i> Q{{total}}</a>
     </div>
 </nav>
