--- a/Woo-ChapinFront/src/app/components/global/carousel/carousel.component.html
+++ b/Woo-ChapinFront/src/app/components/global/carousel/carousel.component.html
@@ -4,26 +4,26 @@
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
-    <div class="carousel-inner">
+    <div class="carousel-inner" *ngIf="images != null">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="../../../../assets/carrousel.jpg" alt="First slide">
+        <img class="d-block w-100" src="{{uri+'getImageCarousel/'+image1}}" alt="First slide">
         <div class="carousel-caption d-none d-md-block">
             <h5>Componentes para tu pc</h5>
             <p>En este lugar</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="../../../../assets/carousel2.jpg" alt="Second slide">
+        <img class="d-block w-100" src="{{uri+'getImageCarousel/'+image2}}" alt="First slide">
         <div class="carousel-caption d-none d-md-block">
-            <h5>Gaming</h5>
-            <p>Tus juegos favoritos</p>
+            <h5>Componentes para tu pc</h5>
+            <p>En este lugar</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="../../../../assets/carousel1.jpg" alt="Third slide">
+        <img class="d-block w-100" src="{{uri+'getImageCarousel/'+image3}}" alt="First slide">
         <div class="carousel-caption d-none d-md-block">
-            <h5>Tecnología</h5>
-            <p>Al alcance de tu mano</p>
+            <h5>Componentes para tu pc</h5>
+            <p>En este lugar</p>
         </div>
       </div>
     </div>
