--- a/Woo-ChapinFront/src/app/components/general/search-category/search-category.component.html
+++ b/Woo-ChapinFront/src/app/components/general/search-category/search-category.component.html
@@ -23,7 +23,7 @@
                       <div class="wcf-left"><span class="price">Q. {{product.precio}}</span></div>
                         <div class="wcf-right d-flex">
                             <a routerLink="../../product/{{product._id}}"  class="buy-btn mr-1"><i class="fa fa-eye"></i></a>
-                            <a  class="buy-btn"><i class="fa fa-cart-plus"></i></a>
+                            <a  class="buy-btn" (click)="addCart(product._id)"><i class="fa fa-cart-plus"></i></a>
                         </div>
                     </div>
                   </div>
