Animaciones admin-home

--- a/Woo-ChapinFront/src/app/components/admin/home-admin/home-admin.component.html
+++ b/Woo-ChapinFront/src/app/components/admin/home-admin/home-admin.component.html
@@ -2,19 +2,19 @@
     <div class="container pt-3 pb-3  w-100">
         <div class="w-100 row">
             <div class="col-lg-4">
-                <div class="w-100 shadow h-100 text-center p-3" style="background-color: #00B74A;">
+                <div class="w-100 shadow h-100 text-center p-3 animation" style="background-color: #00B74A;">
                     <h2>{{tVendido}}</h2>
                     <span>Total en Ventas</span>
                 </div>
             </div>
             <div class="col-lg-4" >
-                <div class="w-100 shadow h-100 text-center p-3" style="background-color: #1266F1 ;">
+                <div class="w-100 shadow h-100 text-center p-3 animation" style="background-color: #1266F1 ;">
                     <h2>{{numberFac}}</h2>
                     <span>Pedidos Realizados</span>
                 </div>
             </div>
             <div class="col-lg-4">
-                <div class="w-100 shadow h-100 text-center p-3" style="background-color: #1266F1;">
+                <div class="w-100 shadow h-100 text-center p-3 animation" style="background-color: #1266F1;">
                     <h2>{{numberUser}}</h2>
                     <span>Usuarios</span>
                 </div>
