--- a/Woo-ChapinFront/src/app/components/admin/home-admin/home-admin.component.css
+++ b/Woo-ChapinFront/src/app/components/admin/home-admin/home-admin.component.css
@@ -22,3 +22,12 @@ h2{
 .shadow{
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
+
+.animation{
+    margin-top: 0%;
+}
+
+.animation:hover{
+    margin-top: -5%;
+    transition: all 0.5s ease-in-out;
+}
