--- a/Woo-ChapinFront/src/app/components/admin/productos/prod-register/prod-register.component.css
+++ b/Woo-ChapinFront/src/app/components/admin/productos/prod-register/prod-register.component.css
@@ -35,3 +35,11 @@
     font-weight: bolder;
 }
 
+.animation{
+    margin-top: 0%;
+}
+
+.animation:hover{
+    margin-top: -5%;
+    transition: all 0.5s ease-in-out;
+}
