--- a/Woo-ChapinFront/src/app/components/global/navbar/navbar.component.css
+++ b/Woo-ChapinFront/src/app/components/global/navbar/navbar.component.css
@@ -1,5 +1,5 @@
 nav{
-    background-color: #2269de !important;
+    background-color: var(--primary1)!important;
 }
 .loader-container{
     position: fixed;
@@ -25,7 +25,7 @@ nav{
 }
 
 .navFixed{
-    background-color: #1F2021 !important;
+    background-color: var(--second) !important;
     position: fixed;
     z-index: 4;
     width: 100%;
